src/test/ui/parser/lex-bad-char-literals-4.stderr
error: character literal may only contain one codepoint: '●
  --> $DIR/lex-bad-char-literals-4.rs:5:5
   |
LL |     '●  //~ ERROR: character literal may only contain one codepoint: '●
   |     ^^

error: aborting due to previous error

